--- a/LoadSoThuTuPhong/Views/Shared/_Layout.cshtml
+++ b/LoadSoThuTuPhong/Views/Shared/_Layout.cshtml
@@ -38,7 +38,7 @@
 
     <script src="@Url.Content("~/dist/lib/Jquery/jquery.min.js")"></script>
     <script src="@Url.Content("~/dist/lib/Jquery/jquery.inputmask.js")"></script>
-    <script>
+    @* <script>
          $(document).on("click", "#loadstt", function (e) {
             e.preventDefault(); // chặn hành vi mặc định (link asp-controller)
 
@@ -50,7 +50,7 @@
             // Redirect với param idChiNhanh
             window.location.href = `/load_so_thu_tu_phong/?idChiNhanh=${window._idcn}`;
         });
-    </script>
+    </script> *@
 
 
     @await RenderSectionAsync("Scripts", required: false)
