--- a/LoadSoThuTuPhong/Views/LoadSoThuTuPhong/Index.cshtml
+++ b/LoadSoThuTuPhong/Views/LoadSoThuTuPhong/Index.cshtml
@@ -138,7 +138,8 @@
         color: white;
         position: fixed;
         bottom: 40px; /* chừa chỗ cho footer */
-        width: 100%;
+        width: 105%;
+        left: -3px;
         box-shadow: 0 -2px 8px rgba(0,0,0,0.2);
         overflow: hidden; /* Quan trọng: ẩn nội dung tràn */
     }
@@ -199,7 +200,8 @@
     .footer {
         position: fixed;
         bottom: 0;
-        width: 100%;
+        width: 105%;
+        left : -3px;
         background: #003366;
         color: #cccccc; /* chữ chìm */
         text-align: center;
@@ -272,7 +274,6 @@
     <div class="footer">
         © Công Ty TNHH TM DV SX Vũ Phong | Địa chỉ: 78/14 Nguyễn Thị Tú - P. Bình Hưng Hòa B - Q. Bình Tân - Tp. HCM | Hotline: 0901 878 896 | Email: sixossoft@gmail.com
     </div>
-
 
 </div>
 <!-- Modal -->
