--- a/LoadSoThuTuPhong/Views/LoadSoThuTuPhong/Index.cshtml
+++ b/LoadSoThuTuPhong/Views/LoadSoThuTuPhong/Index.cshtml
@@ -102,12 +102,11 @@
     }
 
     .status-wait {
-        color: #ff8800;
-        animation: blink 1s infinite alternate;
+        color: #338BB9;
     }
 
     .status-empty {
-        color: #009933;
+        color: #338BB9;
     }
 
     @@keyframes blink {
